# imgfit

./: .gitignore  README.md  img.py  main.py  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
img_fit/: __init__.py
src/img_fit/: __init__.py  __main__.py
